# super-basic-opengl-cmake

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
